--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-easy-toast": "^1.1.0",
+    "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-splash-screen": "^3.0.6",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^4.5.0",
