--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "npm": "^6.1.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-check-box": "^2.1.0",
     "react-native-easy-toast": "^1.1.0",
     "react-native-htmlview": "^0.12.1",
     "react-native-scrollable-tab-view": "^0.8.0",
